     them manipulate the array of `prognames[]` aliases. [PR #3101]
   * `libusb0` and `libusb1` integrations now try both "Resource Descriptor
     Length" values they could identify on some devices: sometimes the first
     (or otherwise preferred) option may be not the correct one, so try the
     other too. [issue #3136]
   * For state tree methods, introduced `difftime_st_tree_timespec()` to
     abstract platform-dependent definitions of `st_tree_timespec_t`. [PR #3156]
   * Introduced global variables for last changed timestamp and value of
     `battery.charge`, integrated with `status_commit()`, so all drivers
     should now report a `CHRG` or `DISCHRG` status, and verify whether
     reality agrees with a status reported by device/protocol (if any).
     This is also a step in direction of eventually providing a common
     `runtimecal` style fallback to all drivers. [issue #3146, PR #3156]
   * Introduced `NOTIFY_STATE_EXTEND_TIMEOUT` option and relevant variables
     for `upsnotify()` method, so we can tell systemd to not kill the service
     unit if its shutdown takes long (see also the `SHUTDOWNEXIT` option in
     the `upsmon` client). [issue #3003, PR #3151]
   * Daemons running with systemd integration tended to report "logged the
     systemd watchdog situation once, will not spam more about it" even if
     those "logged" messages were at an invisible verbosity level. [issue #3157,
     PR #3151]

 - `asem`, `bestfortress`, `bestuferrups`, `bicker_ser`, `everups`, `metasys`,
   `masterguard`, `mge-utalk`, `oneac`, `phoenixcontact_modbus`, `pijuice`,
   `powercom`, `powervar_cx_ser`, `usbhid-ups`, `victronups` driver updates:
   * Moved code to align with NUT driver architecture, so `upsdrv_initups()`
     would focus on preparing communications, and `upsdrv_initinfo()` would
     actually talk to the device and set initial critical data values. [#1962]

 - `apcupsd-ups` driver updates: