@@ -59,6 +59,8 @@ https://github.com/networkupstools/nut/milestone/12
      Length" values they could identify on some devices: sometimes the first
      (or otherwise preferred) option may be not the correct one, so try the
      other too. [issue #3136]
+   * Improved high-verbosity debug tracing of NUT `libhid` and `usbhid-ups`
+     to help make sense of data processing issues (HID paths, strings). [#3201]
    * For state tree methods, introduced `difftime_st_tree_timespec()` to
      abstract platform-dependent definitions of `st_tree_timespec_t`. [PR #3156]
    * Introduced global variables for last changed timestamp and value of
